update style in template

--- a/lib/template.erb
+++ b/lib/template.erb
@@ -157,14 +157,15 @@ table tr th, table tr td
 
 /* tag cloud */
 ul.tagcloud{
-    padding: 0rem 0rem;
+    margin:0px;
+    padding: 0px;
+    list-style-type: none;
     width: 95%;
     background-color: white ;
     color: Blue ;
 }
 ul.tagcloud li{
-    list-style-type: none;
-    display: inline;
+    display: inline-block;
     line-height: 2.0rem;
     margin: 5px 10px;
 }
